# mars-wasm

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html  wrangler.toml
notes/: types.md
src/: app.rs  lib.rs  web.rs
src/application/: helper.rs  marsapp.rs  mod.rs
wasm_examples/: README.md
wasm_examples/c_return_success/: CMakeLists.txt
