[package]
name = "mars-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ProbatusVir/mars-wasm"
description="A little MARS-like IDE for WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
egui = { version="0.33.3" }
eframe = { version="0.33.3" }
web-sys = { version="0.3.85", features = ["HtmlCanvasElement"] }
log = "0.4.29"
wasm-logger = "0.2.0"
serde = { version="1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
